# Piscine-Python

./: test.py
day00/ex02/: find_ft_type.py
day00/ex03/: NULL_not_found.py
day00/ex06/: ft_filter.py
day00/ex07/: sos.py
day00/ex08/: Loading.py
day00/ex09/my_awesome_pkg/: README.md  pyproject.toml
day00/ex09/my_awesome_pkg/src/bgales_everywhere/: bgales_everywhere.py
day01/ex01/: array_2d.py
day01/ex03/: load_image.py  zoom.py
day01/ex04/: load_image.py
day01/ex05/: load_image.py
day02/ex00/: load_csv.py
day02/ex01/: aff_life.py  load_csv.py
day02/ex03/: aff_life.py  load_csv.py  projection_life.py
ex00/: Hello.py  give_bmi.py
ex01/: array_2d.py  format_ft_time.py
ex02/: array_2d.py  find_ft_type.py  load_image.py
ex03/: load_image.py  zoom.py
ex04/: whatis.py  zoom.py
ex05/: building.py  pimp_image.py
ex06/: filterstring.py
ex08/: Loading.py
ex09/: test.py
ex09/my_awesome_pkg/src/bgales_everywhere/: __init__.py
